<resources>
    <string name="app_name">Uso de Controles Basicos</string>

    <string name="titulo">CONTROLES BASICOS</string>

    <string name="nombre">Escriba su nombre</string>

    <string name="apellido">Escriba su apellido</string>

    <string name="enviar_datos">ENVIAR DATOS </string>

    <string name="titulo2">DETERMINAR SI ES MAYOR DE EDAD</string>

    <string name="edad">Escriba su edad</string>

    <string name="volver">PANTALLA ANTERIOR</string>
</resources>